# GRUPO_04_PRUEBA_PRACTICA_1

./: CMakeLists.txt  INFORME.md  README.md  main.cpp
include/: Estructuras.h  Juego.h  ListaCircular.h  ListaDobleEnlazada.h  ListaSecuencial.h
src/: Juego.cpp  ListaCircular.cpp  ListaDobleEnlazada.cpp  ListaSecuencial.cpp  main.cpp
